--- a/Sis1.0.cbp
+++ b/Sis1.0.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="cpp/CuerpoCeleste.cpp" />
+		<Unit filename="headers/CuerpoCeleste.h" />
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
