--- a/Sis1.0.cbp
+++ b/Sis1.0.cbp
@@ -7,16 +7,20 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Sis1.0" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Sis1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lbgi -lgdi32 -luser32" />
+					<Add library="libbgi.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Sis1.0" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Sis1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,7 +36,9 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="cpp/CuerpoCeleste.cpp" />
+		<Unit filename="cpp/SistemaSolar.cpp" />
 		<Unit filename="headers/CuerpoCeleste.h" />
+		<Unit filename="headers/SistemaSolar.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
